--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <h2>New User Registration</h2>
-<%= form_with model: @user do |form| %>
-  <%= form.label :username, 'Username:' %>
-  <%= form.text_field :username %>
+<%= form_with model: @user, local: true do |form| %>
+  <%= form.label :email, 'Email:' %>
+  <%= form.text_field :email %>
   <%= form.label :password, 'Password:' %>
-  <%= form.text_field :password %>
+  <%= form.password_field :password %>
   <%= form.label :password_confirmation, 'Confirm Password:' %>
-  <%= form.text_field :password_confirmation %>
+  <%= form.password_field :password_confirmation %>
   <%= form.submit 'Register User' %>
 <% end %>
