Complete user story 14

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 <p>Viewing Party is an application in which users can explore movie options and create a viewing party event for the user and their invited friends</p>
 
 <%= link_to "Log In", login_path %>
-<%= link_to "Register", new_user_path %>
+<%= link_to "Register", registration_path %>
