--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Welcome to Viewing Party!</h1>
 <p>Viewing Party is an application in which users can explore movie options and create a viewing party event for the user and their invited friends</p>
-
-<%= link_to "Log In", login_path %>
-<%= link_to "Register", registration_path %>
+<br>
+<% if session[:user_id] %>
+  <p>Logged in as: <strong><%= current_user.email %></strong></p>
+  <%= link_to "Log Out", logout_path %>
+<% else %>
+  <br>
+  <%= link_to "Log In", login_path %>
+  <br>
+  <br>
+  <%= link_to "New User Registration", registration_path %>
+<% end %>
