--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,8 @@
 <br>
 <% if session[:user_id] %>
   <p>Logged in as: <strong><%= current_user.email %></strong></p>
+  <%= link_to "Dashboard", dashboard_path(session[:user_id]) %>
+  <br>
   <%= link_to "Log Out", logout_path %>
 <% else %>
   <br>
