--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to Viewing Party!</h1>
 <p>Viewing Party is an application in which users can explore movie options and create a viewing party event for the user and their invited friends</p>
 <br>
-<% if session[:user_id] %>
+<% if session[:user_id] && current_user %>
   <p>Logged in as: <strong><%= current_user.email %></strong></p>
   <%= link_to "Dashboard", dashboard_path(session[:user_id]) %>
   <br>
