--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -22,7 +22,7 @@
 <% end %>
 <br>
 <h2>Viewing Parties</h2>
-<table style="font-family:Trebuchet;">
+<table>
   <thead>
     <tr>
       <th colspan="2"></th>
