Refactor index.html.erb to move login and logout actions to navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@ html, body {
   background-position: bottom;
   background-size: contain;
   background-attachment: fixed;
+  font-family: Quicksand;
 }
 
 main {
