--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -9,6 +9,21 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+        <% if session[:user_id] && current_user %>
+          <li class="nav-item">
+            <%= link_to "Dashboard", dashboard_path(session[:user_id]), class: "nav-link active" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Log Out", logout_path, class: "nav-link active" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Log In", login_path, class: "nav-link active" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Create an Account", registration_path, class: "nav-link active" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
