Complete feature testing for Movie Details page

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,9 +4,9 @@
 <br>
 <br>
 <h3 id="title"><%= @movie[:title] %></h3>
-<h4 id="runtime">Runtime: <%= @movie[:runtime] %> minutes</h4>
+<h4 id="runtime">Runtime: <%= "#{@movie[:runtime] / 60} hours #{@movie[:runtime] % 60} minutes" %></h4>
 <h4 id="vote_average">Vote Average: <%= @movie[:vote_average] %></h4>
-<h4 id="genres">Genres: <%= @movie[:genres].to_s[1..-2] %></h4>
+<h4 id="genres">Genres: <%= @movie[:genres] %></h4>
 <h5 id="overview">Overview: <%= @movie[:overview] %></h5>
 <br>
 <h5>Cast:</h5>
