--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,11 +1,10 @@
 <h2><%= "Create New Viewing Party" %></h2>
 <%= form_with model: @event, local: true do |form| %>
-  <!-- <%#= form.hidden_field(params[:movie_id]) %> -->
-  <%= form.text_field :movie_title, id: :movie_title %> <br>
+  <%= form.text_field :movie_title, id: :movie_title, value: params[:movie_title] %> <br>
   <%= form.label :event_date, 'Event Date:' %>
   <%= form.date_field :event_date, min: Date.today %> <br>
   <%= form.label :runtime, 'Event Duration (in Minutes):' %>
-  <%= form.number_field :runtime, min: 90, max: 480, step: 5 %> <br>
+  <%= form.number_field :runtime, min: params[:runtime], max: 480, value: params[:runtime] %> <br>
   <%= form.label :event_time, 'Start Time:' %>
   <%= form.time_select :event_time, {minute_step: 10, ampm: true}, id: :event_time %> <br>
   <br>
