--- a/app/views/movies/_results.html.erb
+++ b/app/views/movies/_results.html.erb
@@ -1,12 +1,13 @@
 <% if @results && @results.length == 0 %>
   <h3>No Results Found, Please Try Another Search</h3>
 <% elsif @results && @results.length > 0 %>
-  <h3>Search Results:</h3>
+  <h3>Results:</h3>
   <% @results.each do |result| %>
     <div id="result" class="card text-black bg-warning mb-3" style="text-align:center; height:auto; max-width:15rem;">
-      <!-- Placeholder for path helper - need to add in real route when page is built -->
-      <p id="movie-<%= result[:id] %>" style="padding-top:20px;">Title: <%= link_to "#{result[:title]}", movie_path(result[:id]) %></p>
-      <p>Vote Average: <%= result[:vote_average] %></p>
+      <div id="title" style="padding-top:20px;">
+        <%= link_to "#{result[:title]}", movie_path(result[:id]), class: "btn btn-info btn-outline-secondary" %>
+      </div>
+      <p id="vote_average">Vote Average: <%= result[:vote_average] %></p>
     </div>
   <% end %>
 <% end %>
