--- a/app/views/movies/most_popular.html.erb
+++ b/app/views/movies/most_popular.html.erb
@@ -1,5 +1,6 @@
-<h1>Most Popular Movies</h1>
-<%= link_to "Discover Movies", discover_path %>
+<%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
 <br>
+<br>
+<h1>Most Popular Movies</h1>
 <br>
 <%= render partial: 'results' %>
