--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,5 @@
 <h1><%= "Welcome, #{@user.email}!" %></h1>
-<!-- Placeholder for path helper - need to add in real route when page is built -->
-<%= link_to "Discover Movies", discover_path %>
+<%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
 <br>
 <br>
 <%= form_with url: dashboard_path(@user.id), local: true do |form| %>
