--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <h2><%= "Create New Viewing Party" %></h2>
 <%= form_with model: @event, local: true do |form| %>
-(( ADD HIDDEN FIELD HERE ))
+  <%= form.hidden_field :movie_id, id: :movie_id, value: params[:movie_id] %>
   <%= form.text_field :movie_title, id: :movie_title, value: params[:movie_title] %> <br>
   <%= form.label :event_date, 'Event Date:' %>
   <%= form.date_field :event_date, id: :event_date, min: Date.today %> <br>
