--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,5 @@
 <h1>Movie Details</h1>
-<!-- Placeholder for new_event_path helper - need to add in real route when page is built -->
-<%= button_to "Create Viewing Party", popular_path, params: {movie_id: @movie[:id], movie_title: @movie[:title], runtime: @movie[:runtime]}, method: :get, class: "btn btn-info btn-outline-dark" %>
+<%= button_to "Create Viewing Party", new_event_path, params: {movie_id: @movie[:id], movie_title: @movie[:title], runtime: @movie[:runtime]}, method: :get, class: "btn btn-info btn-outline-dark" %>
 <br>
 <br>
 <table class="table table-sm table-borderless table-responsive table align-middle">
