--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Welcome to Viewing Party!</h1>
-<p>Viewing Party is an application in which users can explore movie options and create a viewing party event for the user and their invited friends</p>
-<br>
 <% if session[:user_id] && current_user %>
   <p>Logged in as: <strong><%= current_user.email %></strong></p>
 <% end %>
+<br>
+<h5>Viewing Party is an application in which users can explore movie options and create a viewing party event for their invited friends</h5>
+<br>
+<h5>Visit the Discover page to search for movies and get started!</h5>
