--- a/app/views/movies/_results.html.erb
+++ b/app/views/movies/_results.html.erb
@@ -4,7 +4,7 @@
   <h3>Results:</h3>
   <% @results.each do |result| %>
     <div id="result" class="card bg-warning" align="center" style="width:15rem; border-radius:10px;">
-      <img src="https://image.tmdb.org/t/p/w500<%= result[:poster_path] %>" alt="Poster" class="card-img-top", style="width: 15rem; border-radius:10px;">
+      <img src="<%="#{@config_details[:secure_base_url]}#{@config_details[:poster_size]}#{result[:poster_path]}" %>" alt="Poster" class="card-img-top", style="width: 15rem; border-radius:10px;">
       <h5 id="vote_average" class="card-title" style="padding-top:20px;">Vote Average: <%= result[:vote_average] %></h5>
       <div id="title" class="card-body">
         <%= link_to "#{result[:title]}", movie_path(result[:id]), class: "btn btn-info btn-outline-dark" %>
