--- a/app/views/users/_parties.html.erb
+++ b/app/views/users/_parties.html.erb
@@ -3,6 +3,9 @@
 <% else %>
   <% events = User.events_invited_to(current_user.id) %>
 <% end %>
+<% if events.length == 0 %>
+  <p align="left">Oops, no parties here!</br>Add some friends and discover movies to get started!</p>
+<% end %>
 <% events.each do |event| %>
   <div id="event-<%= event.id %>" class="card text-black bg-warning mb-3" style="text-align:center; height:auto; max-width:18rem;">
     <h4 class="card-header">Event Details:</h4>
