--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Top Rated", popular_path, class: "btn btn-info btn-outline-dark" %>
+<%= link_to "Upcoming", upcoming_path, class: "btn btn-info btn-outline-dark" %>
 <br>
 <br>
 <h1>Discover Movies</h1>
