Refactor movie results page for horizontal scroll

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,8 @@ html, body {
   background-position: bottom;
   background-size: contain;
   background-attachment: fixed;
-  font-family: 'Acme';font-size: 22px;
+  font-family: 'Acme';
+  font-size: 22px;
 }
 
 main {
