--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -3,11 +3,10 @@
 <br>
 <br>
 <h1>Discover Movies</h1>
-<br>
 <%= form_with url: discover_path, local: true do |form| %>
   <%= form.label :find_movies, 'Find Movies:' %>
   <%= form.text_field :search_criteria, id: :search_criteria %>
-  <%= form.submit 'Search' %>
+  <%= form.submit 'Search', class: "btn btn-info btn-sm btn-outline-dark" %>
 <% end %>
 <br>
 <%= render partial: 'results' %>
