--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -5,7 +5,7 @@
 <%= form_with url: dashboard_path(@user.id), local: true do |form| %>
   <%= form.label :find_friends, 'Find Friends:' %>
   <%= form.text_field :email, id: :email %>
-  <%= form.submit 'Search' %>
+  <%= form.submit 'Search', class: "btn btn-info btn-sm btn-outline-dark" %>
 <% end %>
 <br>
 <% if !@user.friends? %>
