--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,5 +6,5 @@
   <%= form.password_field :password, id: :password %>
   <%= form.label :password_confirmation, 'Confirm Password:' %>
   <%= form.password_field :password_confirmation, id: :password_confirmation %>
-  <%= form.submit 'Register User' %>
+  <%= form.submit 'Register User', class: "btn btn-info btn-sm btn-outline-dark" %>
 <% end %>
