--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,13 +2,15 @@
 <%= form_with model: @event, local: true do |form| %>
   <%= form.hidden_field :movie_id, id: :movie_id, value: params[:movie_id] %>
   <%= form.text_field :movie_title, id: :movie_title, value: params[:movie_title] %>
-  <br><br>
+  <br>
   <%= form.label :event_date, 'Event Date:' %>
-  <%= form.date_field :event_date, id: :event_date, min: Date.today %> <br>
+  <%= form.date_field :event_date, id: :event_date, min: Date.today %>
+  <br>
   <%= form.label :runtime, 'Event Duration (in Minutes):' %>
   <%= form.number_field :runtime, id: :runtime, min: params[:runtime], max: 480, value: params[:runtime] %> <br>
   <%= form.label :event_time, 'Start Time:' %>
-  <%= form.time_select :event_time, {minute_step: 15, ampm: true}, id: :event_time %> <br>
+  <%= form.time_select :event_time, {minute_step: 15, ampm: true}, id: :event_time %>
+  <br>
   <br>
   <h5>Your Current Followers:</h5>
   <% current_user.followers.each do |follower| %>
